--- a/app-contatos/src/app/pages/listar-contatos/listar-contatos.page.html
+++ b/app-contatos/src/app/pages/listar-contatos/listar-contatos.page.html
@@ -1,13 +1,20 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>listar-contatos</ion-title>
+    <ion-title>Listar Contatos</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">listar-contatos</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <ion-list>
+    <ion-item *ngFor="let contato of contatos">
+      <ion-label>
+        <h2>{{ contato.nome }}</h2>
+        <p>{{ contato.email }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-button expand="full" class="ion-margin-top" routerLink="/adicionar-contato">
+    Adicionar Novo Contato
+  </ion-button>
 </ion-content>
